[package]
name = "jecnaproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
reqwest = { version = "0.13.1", features = ["json", "stream", "multipart", "cookies"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
